Fix: Alignment of the date.

--- a/src/themes/heise/style.css
+++ b/src/themes/heise/style.css
@@ -243,6 +243,11 @@ tr.posting:hover a {
   color: #008000;
 }
 
+td.thread_date {
+  text-align: right;
+  white-space: nowrap;
+}
+
 td.null {
   width: 8px;
 }
